<resources>
    <string name="app_name">evernote</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_allnotes">All notes</string>
    <string name="menu_notebook">Notebooks</string>
    <string name="menu_tags">Tags</string>
    <string name="menu_share">Share with me</string>
    <string name="menu_collect_photos">Collect photos</string>
    <string name="menu_workchat">Work Chat</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_send">Send</string>
    <string name="action_create_notbook">Thêm sổ tay</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
