<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_allnotes"
            android:icon="@drawable/ic_notes"
            android:title="@string/menu_allnotes" />
        <item
            android:id="@+id/nav_notebook"
            android:icon="@drawable/ic_notebook"
            android:title="@string/menu_notebook" />
        <item
            android:id="@+id/nav_tags"
            android:icon="@drawable/ic_tags"
            android:title="@string/menu_tags" />

        <item
            android:id="@+id/nav_photos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_collect_photos" />
        <item
            android:id="@+id/nav_workchat"
            android:icon="@drawable/ic_chat"
            android:title="Work chat" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="Local share" />
    </group>

    <item android:title="Communicate">
        <menu>

            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
